# bison

./: DEV.md  README.md  campaign.example.json  campaign.schema.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_campaign_schema.py
src/emailbison/: cli.py  client.py  config.py  models.py
src/emailbison/commands/: campaign.py  campaign_admin.py  campaign_sequence.py  sender_emails.py
src/emailbison/utils/: redact.py  time.py
tests/: test_campaign_batch.py  test_client.py  test_models.py  test_time.py
